tests/NormalTests/paczka1/fuzzy1/56932959.err
Error in line 1: iFiYv1ddMy A85 75,3
Error in line 9: hpiT A85 15,16
Error in line 6: hpiT S381 81,7
Error in line 20: yG7 S381 63,2
